--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2.1.0
       with:
-        node-version: '12' 
+        node-version: [10.x, 12.x, 14.x] 
      
     - run: npm ci
       working-directory: ./testoapp 
