--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -9,12 +9,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2.1.0
-      with:
-        node-version: [10.x, 12.x, 14.x] 
+    - uses: actions/setup-node@v2.1.0 
      
     - run: npm ci
       working-directory: ./testoapp 
