--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2.1.0 
+    - name: By Node.js version ${{matrix.node-version}}  
+      with:
+        node-version: ${{matrix.node-version}}
      
     - run: npm ci
       working-directory: ./testoapp 
