--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2.1.0 
-    - name: By Node.js version ${{matrix.node-version}}  
+    - name: By Node.js version ${{matrix.node-version}}    
+      uses: actions/setup-node@v2.1.0 
       with:
         node-version: ${{matrix.node-version}}
      
