--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI for Node.js
 
 on:
   push:
@@ -8,7 +8,24 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v2
+      - name: npm install and build webpack
+        run: |
+          npm install
+           working-directory: ./testoapp 
+          npm run build:prod
+           working-directory: ./testoapp 
+      - uses: actions/upload-artifact@master
+        with: 
+          name: buld-result
+          path: public/
+     
+  test:
+    runs-on: ubuntu-latest
+    needs: build
     
     strategy:
       matrix:
@@ -17,13 +34,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: By Node.js version ${{matrix.node-version}}    
+    - uses: actions/download-artifact@master
+      with: 
+        name: buld-result
+        path: public
+  
+    - name: Test with Node.js version ${{matrix.node-version}}    
       uses: actions/setup-node@v2.1.0 
       with:
-        node-version: ${{matrix.node-version}}
-     
-    - run: npm ci
-      working-directory: ./testoapp 
-      
-    - run: npm run deploy
-      working-directory: ./testoapp   
+        node-version: ${{matrix.node-version}}       
+        
+    - name: Install and test
+      run: |
+        npm install
+           working-directory: ./testoapp   
+        npm test: prod
+           working-directory: ./testoapp   
+      env:
+        CI: true
+ 
