--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
-      - name: npm install and build webpack
+      - name: Install and build 
         run: |
           npm install
            working-directory: ./testoapp 
@@ -20,12 +20,13 @@ jobs:
            working-directory: ./testoapp 
       - uses: actions/upload-artifact@master
         with: 
-          name: buld-result
+          name: build-result
           path: public/
      
   test:
     runs-on: ubuntu-latest
     needs: build
+     
     
     strategy:
       matrix:
@@ -36,7 +37,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/download-artifact@master
       with: 
-        name: buld-result
+        name: build-result
         path: public
   
     - name: Test with Node.js version ${{matrix.node-version}}    
@@ -45,11 +46,14 @@ jobs:
         node-version: ${{matrix.node-version}}       
         
     - name: Install and test
+      
       run: |
+        defaults: 
+          working-directory: ./testoapp
         npm install
            working-directory: ./testoapp   
         npm test: prod
            working-directory: ./testoapp   
-      env:
-        CI: true
+            env:
+              CI: true
  
