--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install and build 
         run: |
+           defaults: 
+            working-directory: ./testoapp
           npm install
            working-directory: ./testoapp 
           npm run build:prod
